<package>
  <name>mdc2250</name>
  <version>1.0.0</version>
  <description>mdc2250</description>
  <maintainer email="none@none.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mdc2250</url>
  <!-- <url type="bugtracker"></url> -->

  <author>William Woodall</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>serial_utils</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>serial_utils</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>serial</test_depend> -->
  <!-- <test_depend>serial_utils</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lmdc2250" cflags="-I${prefix}/include"/>
</export>

</package>
